<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_seekBar"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/tv_SizeCore"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar_SizeCore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="64"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_CountThreads"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/tv_CountThreads"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_CountThreads"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:entries="@array/countThreads"
            android:minHeight="36dp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_Process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ImageProcessing"
        android:text="@string/btn_Process"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="StopProcessing"
        android:text="@string/btn_Stop" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_BoxBlur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cb_BlurBox" />

        <RadioButton
            android:id="@+id/rb_GaussianBlur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cb_GaussianBLur" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_Time"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foreground="@drawable/game"
        android:foregroundGravity="center" />

</LinearLayout>